refactor: add constants class